style: avoid wrapping for line numbers in code blocks with 4 figures

--- a/main.css
+++ b/main.css
@@ -292,7 +292,7 @@ p:has(img):has(em) {
 }
 
 .line-number {
-  width: 2rem;
+  width: 3rem;
   display: inline-block;
   text-align: right;
   padding: .2rem;
